--- a/api/Makefile
+++ b/api/Makefile
@@ -7,3 +7,12 @@ build:
 
 run:
 	air -c .air.toml
+
+migration:
+	migrate create -ext sql -dir ./migrations/ $(filter-out $@,$(MAKECMDGOALS))
+
+migrate-up:
+	go run ./cmd/migrate/main.go up
+
+migrate-down:
+	go run ./cmd/migrate/main.go down
